Entrego PF Pirani

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta name="viewport" contnt="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Enterate de todo el trayecto de wos, sus inicios, avances como artista y descubri su vida">
+    <meta name="keywords" content="Blog, canciones, biografia,">
     <link rel="stylesheet" href="./animaciones/animaciones.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href=".css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Inicio</title>
 </head>
 
@@ -46,10 +46,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/deslizar 1.jpg" class="d-block w-100" alt="...">
+                <img src="img/deslizar 1 1 1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="img/deslizar-2.webp" class="d-block w-100" alt="..." >
+              </div>
+              <div class="carousel-item">
+                <img src="img/deslizar 3 3.jpg" class="d-block w-100" alt="..." >
               </div>
               
             </div>
